--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,11 +1,11 @@
 // rem
 html {
-  font-size: 62.5%;
+
 }
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: $m-size;
+  color: red;
 }
 
 button {
