--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,8 +4,7 @@ html {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
-  color: red;
+  /*font-family: Helvetica, Arial, sans-serif;*/
 }
 
 button {
