create Header component and style it up

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,15 @@
 // rem
 html {
-
+  font-size: 16px; // base font size
 }
 
 body {
-  /*font-family: Helvetica, Arial, sans-serif;*/
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+}
+
+h1 {
+
 }
 
 button {
