--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,9 +1,10 @@
 // Colors
+$navy-blue: #0D293C;
+$off-white: #A5AFD7;
 
 // Spacing
-// m-size
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
-$desktop-breakpoint: 45rem;
+$s-size: 0.75rem; // 12 px
+$m-size: 1rem; // 16 px
+$l-size: 2rem; // 32 px
+$xl-size: 3rem; // 48 px
+$desktop-breakpoint: 28rem;
