add logo img to header, use flexbox for layout of container

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -1,5 +1,6 @@
 .container {
-  max-width: 37.5rem; // 600 px
+  display: flex;
+  max-width: 31.25rem; // 500 px
   margin: 0 auto;
   padding: 0 $m-size;
 }
