styling CourseSelector component, not done yet

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,8 @@
 // Colors
 $navy-blue: #0D293C;
 $off-white: #A5AFD7;
+$blue: #3C4251;
+$light-blue: #464B5E;
 
 // Spacing
 $s-size: 0.75rem; // 12 px
