style add-course and course

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './base/settings';
 @import './base/base';
-@import './components/container';
-@import './components/header';
+@import './components/add-course';
+@import './components/course';
 @import './components/course-selector';
+@import './components/header';
