refactor scss files for each component, fix border-radius issue

--- a/src/styles/components/_add-course.scss
+++ b/src/styles/components/_add-course.scss
@@ -1,5 +1,14 @@
+.add-course__container {
+  margin-top: $s-size;
+  padding: $m-size $m-size 0 $m-size;
+}
+
+.add-course__header__title {
+  color: white;
+}
+
 .add-course-error {
   color: white;
   font-style: italic;
-  padding: 0 $m-size;
+  padding: $m-size;
 }
