--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,5 +2,6 @@
 @import './base/base';
 @import './components/add-course';
 @import './components/course';
+@import './components/courses';
 @import './components/course-selector';
 @import './components/header';
