add containers for main app and course detail

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,9 @@
 @import './base/settings';
 @import './base/base';
 @import './components/add-course';
+@import './components/app-root';
 @import './components/course';
 @import './components/courses';
+@import './components/course-detail';
 @import './components/course-selector';
 @import './components/header';
