--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import './components/course-detail';
 @import './components/course-selector';
 @import './components/header';
+@import './components/schedules';
