--- a/src/styles/components/_course-detail.scss
+++ b/src/styles/components/_course-detail.scss
@@ -1,5 +1,9 @@
 .course-detail__container {
   max-width: 700px;
   min-width: 18.75rem;
-  margin: 0 auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: auto;
+  padding: 1.75rem;
 }
