add root component schedules title css alignments

--- a/src/styles/components/_app-root.scss
+++ b/src/styles/components/_app-root.scss
@@ -8,3 +8,17 @@
   max-height: 62.5rem;
   border-radius: 6px;
 }
+
+
+.app-root__schedules-title-wrapper {
+  min-width: 300px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: auto;
+  padding: 1.75rem;
+}
+
+.app-root__schedules-title-wrapper h3 {
+  text-align: center;
+}
