lots of padding and margin adjustments

--- a/src/styles/components/_app-root.scss
+++ b/src/styles/components/_app-root.scss
@@ -4,7 +4,7 @@
   justify-content: space-around;
   margin-bottom: 25rem;
   background-color: white;
-  margin: 0 $xl-size;
+  margin: 0 $l-size;
   max-height: 62.5rem;
   border-radius: 6px;
 }
