--- a/src/styles/components/_course-selector.scss
+++ b/src/styles/components/_course-selector.scss
@@ -3,7 +3,7 @@
   min-width: 18.75rem; // 300px
   margin-top: 0;
   margin-bottom: 0;
-  margin-left: $xl-size;
+  margin-left: $l-size;
   margin-right: auto;
 }
 
@@ -18,7 +18,7 @@
 .course-selector__message {
   color: $off-white;
   margin: 0;
-  padding: $l-size;
+  padding: $s-size;
   text-align: center;
 }
 
