--- a/src/styles/components/_courses.scss
+++ b/src/styles/components/_courses.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: $m-size;
+  padding: $s-size;
 }
 
 .course-selector__header__title {
