--- a/src/styles/components/_add-course.scss
+++ b/src/styles/components/_add-course.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-content: space-around;
-  padding: 0 $l-size;
+  padding: 0;
   font-size: $s-size;
 }
 
