--- a/src/styles/components/_course-detail.scss
+++ b/src/styles/components/_course-detail.scss
@@ -2,8 +2,13 @@
   max-width: 700px;
   min-width: 18.75rem;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: $xl-size;
   margin-left: 0;
   margin-right: auto;
   padding: 1.75rem;
+}
+
+.course-detail__header-text {
+  text-align: center;
+  margin-bottom: $s-size;
 }
