--- a/src/styles/components/_course.scss
+++ b/src/styles/components/_course.scss
@@ -1,7 +1,7 @@
 .course {
   display: flex;
   justify-content: space-between;
-  padding: $m-size $m-size;
+  padding: $m-size $s-size;
 }
 
 .course__text {
