made schedules title wrapper more responsive for desktop

--- a/src/styles/components/_app-root.scss
+++ b/src/styles/components/_app-root.scss
@@ -10,14 +10,15 @@
 
 
 .app-root__schedules-title-wrapper {
-  min-width: 300px;
+  width: 60%;
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 0;
   margin-right: auto;
-  padding: 1.75rem;
+  padding-top: 1.75rem;
 }
 
 .app-root__schedules-title-wrapper h3 {
+  width: 100%;
   text-align: center;
 }
