--- a/src/styles/components/_app-root.scss
+++ b/src/styles/components/_app-root.scss
@@ -7,7 +7,23 @@
   margin: 0 $l-size;
   border-radius: 6px;
 }
-
+.app-root__error-msg-wrapper {
+  width: 60%;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.app-root__error-msg-wrapper p {
+  width: 100%;
+  text-align: center;
+  color: red;
+  font-style: italic;
+  font-size: $m-size;
+}
 
 .app-root__schedules-title-wrapper {
   width: 60%;
