install moment.js, calculated offset and height for event div
Need to refactor the code sometime.  It's getting ugly.  Readability is a must.
I can probably refactor offset and height calculation to their own functions.
Perhaps I can put the functions in the lib directory.

--- a/src/styles/components/_schedules.scss
+++ b/src/styles/components/_schedules.scss
@@ -77,6 +77,7 @@
   display: block;
   top: 100px;
   background-color: #fff2bf;
+  border-left: 4px solid darken(#fff2bf, 50%);
   height: 100px;
   width: 100%;
   opacity: 0.6;
