--- a/src/styles/components/_course-detail.scss
+++ b/src/styles/components/_course-detail.scss
@@ -1,6 +1,7 @@
 .course-detail__container {
   max-width: 800px;
   min-width: 18.75rem;
+  width: 70%;
   margin-top: 0;
   margin-bottom: $xl-size;
   margin-left: 0;
