--- a/src/styles/components/_course-selector.scss
+++ b/src/styles/components/_course-selector.scss
@@ -1,6 +1,7 @@
 .course-selector__container {
   max-width: 25rem; // 400px
   min-width: 18.75rem; // 300px
+  width: 30%;
   margin-top: 0;
   margin-bottom: 0;
   margin-left: $l-size;
