center sections table, allow schedules and course detail full width

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/course-selector';
 @import './components/header';
 @import './components/schedules';
+@import './components/sections-table';
