course selector now moves less, padding added for error msg container

--- a/src/styles/components/_app-root.scss
+++ b/src/styles/components/_app-root.scss
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-right: $m-size;
 }
 
 .app-root__schedules-title-wrapper {
