put sass styles in own file for components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,5 @@
 @import './components/header';
 @import './components/schedules';
 @import './components/sections-table';
+@import './components/weekly-cal-header';
+@import './components/weekly-cal-view';
