made ui mobile friendly, calendar still needs work

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @import './components/course-detail';
 @import './components/course-selector';
 @import './components/header';
+@import './components/responsive-styles';
 @import './components/schedules';
 @import './components/sections-table';
 @import './components/weekly-cal-header';
