add a settings page, need all components to share HOC withAuth state

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,7 +9,9 @@
 @import './components/header';
 @import './components/login-page';
 @import './components/responsive-styles';
+@import './components/saved-schedules';
 @import './components/schedules';
 @import './components/sections-table';
+@import './components/settings-page';
 @import './components/weekly-cal-header';
 @import './components/weekly-cal-view';
