saved schedules page displays and deletes schedules, need to fix calendar rendering
Might have to move the monday, tuesday, wednesday, etc. arrays into the WeeklyCalendarView component's state
so that whenever the current schedule updates, the weekly calendar view will update accordingly, even
when a schedule is deleted.  The state it will be rendering from is the current schedule.

--- a/src/styles/components/_saved-schedules.scss
+++ b/src/styles/components/_saved-schedules.scss
@@ -1,5 +1,5 @@
 .saved-schedules__main-container {
-  display: flex;
+  // display: flex;
   // flex-direction: row;
   // justify-content: space-around;
   margin-bottom: 25rem;
