setup save schedule buttons

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,7 @@
 @import './base/settings';
 @import './base/base';
 @import './components/add-course';
-@import './components/app-root';
+@import './components/plan-schedules-page';
 @import './components/course';
 @import './components/courses';
 @import './components/course-detail';
