add beautiful Nav Bar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './components/course-selector';
 @import './components/header';
 @import './components/login-page';
+@import './components/nav-bar-menu';
 @import './components/responsive-styles';
 @import './components/saved-schedules';
 @import './components/schedules';
