--- a/src/styles/components/_responsive-styles.scss
+++ b/src/styles/components/_responsive-styles.scss
@@ -5,7 +5,9 @@
   }
   .main-container {
     flex-direction: column;
-    margin: 0;
+    margin-bottom: $xl-size;
+    margin-left: $m-size;
+    margin-right: $m-size;
   }
   .course-selector__container {
     margin: 0 auto;
@@ -38,6 +40,7 @@
     padding: 0 1rem;
     width: 100%;
     font-size: 1.1rem;
+    margin-bottom: $xl-size;
   }
   .app-root__schedules-title-wrapper {
     width: 100%;
