--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -33,12 +33,12 @@ button:disabled {
 }
 
 .login-signup-page__main-container {
-  display: flex;
   // flex-direction: row;
   // justify-content: space-around;
   margin-bottom: 25rem;
   background-color: white;
   margin: 0 $l-size;
+  padding: $xl-size 100px;
   border-radius: 6px;
   min-height: 400px;
   height: auto;
