start setting up for responsive weekly-calendar

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,3 +10,8 @@ $m-size: 1rem; // 16 px
 $l-size: 2rem; // 32 px
 $xl-size: 3rem; // 48 px
 $desktop-breakpoint: 28rem;
+
+// Calendar Heights for different break points.
+$mobile-hr-slot-height: 75px;
+$smaller-hr-slot-height: 60px;
+$regular-hr-slot-height: 50px;
