--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './base/settings';
 @import './base/base';
+@import './calendar-event';
 @import './components/add-course';
 @import './components/plan-schedules-page';
 @import './components/course';
