made hour slot heights bigger for now

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -13,5 +13,5 @@ $desktop-breakpoint: 28rem;
 
 // Calendar Heights for different break points.
 $mobile-hr-slot-height: 75px;
-$smaller-hr-slot-height: 60px;
-$regular-hr-slot-height: 50px;
+$bigger-hr-slot-height: 60px;
+$regular-hr-slot-height: 75px;
