Tbd accounted for, margin adjust

--- a/src/styles/components/_saved-schedules.scss
+++ b/src/styles/components/_saved-schedules.scss
@@ -1,7 +1,8 @@
 .saved-schedules__main-container {
   margin-bottom: 25rem;
   background-color: white;
-  margin: 0 $l-size;
+  margin-left: $l-size;
+  margin-right: $l-size;
   border-radius: 6px;
   min-height: 400px;
   height: auto;
