--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -37,7 +37,8 @@ button:disabled {
   // justify-content: space-around;
   margin-bottom: 25rem;
   background-color: white;
-  margin: 0 $l-size;
+  margin-left: $l-size;
+  margin-right: $l-size;
   padding: $xl-size 100px;
   border-radius: 6px;
   min-height: 400px;
