--- a/src/styles/components/_plan-schedules-page.scss
+++ b/src/styles/components/_plan-schedules-page.scss
@@ -4,7 +4,8 @@
   justify-content: space-around;
   margin-bottom: 25rem;
   background-color: white;
-  margin: 0 $l-size;
+  margin-left: $l-size;
+  margin-right: $l-size;
   border-radius: 6px;
   min-height: 400px;
   height: auto;
