--- a/src/styles/components/_responsive-styles.scss
+++ b/src/styles/components/_responsive-styles.scss
@@ -22,7 +22,7 @@
   .add-course__dropdown-wrapper {
     font-size: 1rem;
   }
-  .course-detail__container {
+  .course-detail__container, .loader__container {
     padding: 0 1rem 1rem 1rem;
     width: 100% !important;
   }
