--- a/src/styles/components/_add-course.scss
+++ b/src/styles/components/_add-course.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-content: space-around;
-  padding: 0;
+  padding: 0 !important;
 }
 
 #add-course__dept-dropdown {
