Add term changing feature

--- a/src/styles/components/_add-course.scss
+++ b/src/styles/components/_add-course.scss
@@ -5,6 +5,8 @@
 .add-course__header__title {
   text-align: center;
   color: black;
+  font-size: 24px;
+  margin-top: 10px;
 }
 
 .add-course-error {
