--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,5 +14,6 @@
 @import './components/schedules';
 @import './components/sections-table';
 @import './components/settings-page';
+@import './components/term-dropdown';
 @import './components/weekly-cal-header';
 @import './components/weekly-cal-view';
