--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,10 @@ button:disabled {
 .login-signup-page__main-container {
  /*flex-direction: row;*/
  /*justify-content: space-around;*/
-  margin-bottom: 25rem;
   background-color: white;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  padding: 3rem 100px;
+  max-width: 500px;
+  margin: 0 auto 20rem auto;
+  padding: 50px 35px;
   border-radius: 6px;
   min-height: 400px;
   height: auto;
@@ -78,13 +77,13 @@ button:disabled {
   .header {
     margin: 0;
   }
-  .main-container, .saved-schedules__main-container,
-  .login-signup-page__main-container {
+  .main-container, .saved-schedules__main-container {
     flex-direction: column;
     margin-bottom: 25rem;
     margin-left: 1rem !important;
     margin-right: 1rem !important;
   }
+
   .course-selector__container {
     margin: 0 auto;
   }
@@ -126,10 +125,6 @@ button:disabled {
     padding: 0 1rem;
   }
 
-  .login-signup-page__main-container {
-    padding: 3rem 50px;
-  }
-
 }
 
 /* devices <= 640px */
@@ -160,7 +155,7 @@ button:disabled {
     font-size: 1.2rem;
   }
   .login-signup-page__main-container {
-    padding: 3rem 25px;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
-
 }
