--- a/src/components/Pages/SavedSchedulesPage.css
+++ b/src/components/Pages/SavedSchedulesPage.css
@@ -6,7 +6,20 @@
   border-radius: 6px;
   min-height: 400px;
   height: auto;
+  padding: 15px 20px 25px;
 }
+
+.saved-schedules__header-text {
+  text-align: center;
+}
+
+.saved-schedules__loader-container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-top: 100px;
+}
+
 .saved-schedules__warning-msg-wrapper {
   display: flex;
   position: relative;
