--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ button:disabled {
   background-color: white;
   max-width: 500px;
   margin: 0 auto 20rem auto;
-  padding: 50px 35px;
+  padding: 20px 35px 40px 35px;
   border-radius: 6px;
   min-height: 400px;
   height: auto;
