custom event button with modal, add event to redux store

--- a/src/components/CourseSelector/CourseSelector.css
+++ b/src/components/CourseSelector/CourseSelector.css
@@ -28,6 +28,12 @@
   padding: 1rem;
 }
 
+.course-selector__custom-event-btn {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 1rem;
+}
+
 
 #course-selector__advanced-options-text {
   font-weight: bold;
