more UI improvements, remove spring 2018 term

--- a/src/components/Schedules/Schedules.css
+++ b/src/components/Schedules/Schedules.css
@@ -18,8 +18,8 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .valid-schedule__counter {
